# Ipeco_VOIPClient

./: .gitignore  2016.txt  README.md  local.properties
Application/: local.properties
Application/APK_FleetSpeak/: app-debug.apk
Documents/: cmd_formatted.css  command_formatted.html  commands.txt  report_occlusion_tests.xls
FleetSpeak/: OcclusionServiceApp.apk  build.gradle
FleetSpeak/Server/: ChatHandler.java  ServerBroadcast.java  ServerMain.java  SoundHandler.java  TestClient.java
FleetSpeak/app/: build.gradle
Management/: .classpath  .gitignore  .project
Management/log/: fleetspeak.log.1
Management/res/: about.fxml  adminclient.fxml  adminclient_login.fxml  connectionlost.fxml  home.fxml  largeroompane.fxml  largeuserpane.fxml  login.fxml  main.fxml  mapview.fxml  mapview.html  menu.css  roompane.fxml  sidemenu.fxml  speakmode.fxml  statistics.fxml  stylesheet.css  tmpcontent.fxml  usermanagement.fxml  userpane.fxml
Server/: Handler.java  SoundHandler.java  TestClient.java
Server/database/: data.sql  setup.sql  tables.sql
Server/eclipse/: .gitignore  .project  build.xml  notes.txt  server_uml.uxf  tcp_modbot_text.txt  tmpSilence.txt
Server/eclipse/NativeLib/: CMakeLists.txt  fleetspeak.mk  make  makeOSX  makefile  opus_compare  opus_demo  windowsMake.mk
Server/eclipse/NativeLib/celt/: CMakeLists.txt
Server/eclipse/NativeLib/silk/: CMakeLists.txt
Server/eclipse/NativeLib/silk/fixed/: CMakeLists.txt
Server/eclipse/NativeLib/silk/float/: CMakeLists.txt
Server/eclipse/NativeLib/src/: CMakeLists.txt
SharedLib/: Android.mk  fleetspeak.mk  make  opus_compare  opus_demo
SharedLib/native_fleetspeak/: se_chalmers_fleetspeak_audio_codec_opus_jniopus_OpusDecoderWrapper.c  se_chalmers_fleetspeak_audio_codec_opus_jniopus_OpusEncoderWrapper.c  se_chalmers_fleetspeak_audio_processing_NativeAudioProcessor.c  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
(+856 files in other folders)
